21 December 2016: Ralph
	- Fix #1188: Unresolved symbol 'fake_dsa' in libunbound.so when built
	  with Nettle

19 December 2016: Ralph
	- Fix #1191: remove comment about view deletion.

15 December 2016: Wouter
	- iana portlist update
	- 64bit is default for windows builds.
	- Fix inet_ntop and inet_pton warnings in windows compile.

14 December 2016: Wouter
	- Fix #1178: attempt to fix setup error at end, pop result values
	  at end of install.

13 December 2016: Wouter
	- Fix #1182: Fix Resource leak (socket), at startup.
	- Fix unbound-control and ipv6 only.

9 December 2016: Wouter
	- Fix #1176: stack size too small for Alpine Linux.

8 December 2016: Wouter
	- Fix downcast warnings from visual studio in sldns code.
	- tag 1.6.0rc1 which became 1.6.0 on 15 dec, and trunk is 1.6.1.

7 December 2016: Ralph
	- Add DSA support for OpenSSL 1.1.0
	- Fix remote control without cert for LibreSSL

6 December 2016: George
	- Added generic EDNS code for registering known EDNS option codes,
	  bypassing the cache response stage and uniquifying mesh states. Four EDNS
	  option lists were added to module_qstate (module_qstate.edns_opts_*) to
	  store EDNS options from/to front/back side.
	- Added two flags to module_qstate (no_cache_lookup, no_cache_store) that
	  control the modules' cache interactions.
	- Added code for registering inplace callback functions. The registered
	  functions can be called just before replying with local data or Chaos,
	  replying from cache, replying with SERVFAIL, replying with a resolved
	  query, sending a query to a nameserver. The functions can inspect the
	  available data and maybe change response/query related data (i.e. append
	  EDNS options).
	- Updated Python module for the above.
	- Updated Python documentation.

5 December 2016: Ralph
	- Fix #1173: differ local-zone type deny from unset
	  tag_actions element.

5 December 2016: Wouter
	- Fix #1170: document that 'inform' local-zone uses local-data.

1 December 2016: Ralph